# Skrit

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  leet.py  leetrovacki.py  pyproject.toml  satrovacki.py  skrit.py  utrovacki.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
tests/: corpus_963.py  corpus_data.py  test_corpus_roundtrip.py  test_leet.py  test_leetrovacki.py  test_module_cli_coverage.py  test_satrovacki.py  test_skrit.py  test_skrit_cli_coverage.py  test_utrovacki.py
